# JWST-Data-Analysis

./: MANIFEST.in  Makefile  README.md  UNCOVER_DR4_SPS_zspec_catalog.fits  make.bat  pyproject.toml  requirements.txt
config/: default.toml
docs/source/: installation.rst  readme.rst
source/: conf.py  core.rst  index.rst  installation.rst
src/jwst_galaxy_analysis/: __init__.py  ceers.py  cli.py  config.py  cosmology.py  default_config.toml  io.py  logging_utils.py  photometry.py  pipeline.py  plotting.py  run_analysis.py  types.py  uncover.py  validation.py
tests/: test_config.py  test_errors.py  test_validation.py
